# JaxLayerLumos

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  MATERIALS.md  README.md  RadarUpdates.pages  compare_results.txt  paper.bib  paper.md  process.py  pyproject.toml
benchmarking/: compare_lumerical.py  compare_methods.py  compare_old_new_lum.py  lumerical_stackrt_multi_layers.py  method_ansys.py  method_jaxlayerlumos.py  method_jaxlayerlumos_old.py  method_tmm.py  method_tmm_fast.py  plotting.py  run_on_cpus_or_tpus.py  script_lum_display.sh  script_lum_prerun.sh  show_results.py  tmm_core.py
docs/: conf.py  index.rst
examples/: angle-variation.ipynb  calculate_gradients.py  color-conversion.ipynb  color-exploration.ipynb  colors.ipynb  compare_fast_slow.py  compare_lumerical.py  compare_tmm.py  convert_materials.py  demo-angle.ipynb  demo-angles.ipynb  demo-colors.ipynb  demo-gradient.ipynb  demo-optimization-dog.ipynb  demo-plotting-n-k.ipynb  demo-radar.ipynb  demo-solar.ipynb  demo-visible.ipynb  demo.ipynb  example_optimization.ipynb  generate_materials_md.py  gradient-computation.ipynb  light-source-visualization.ipynb  lumerical_stackrt_multi_layers.py  n-k-extrapolation.ipynb  optimization-bayeso.ipynb  optimization-dog.ipynb  plot_n_k.ipynb  plot_spectra.py  radar-design.ipynb  run_jaxlayerlumos.py  show_refractive_indices.py  silicon-absorption.ipynb  silicon_solar_cell_absorption.ipynb  simulate_silicon_absorption.ipynb  simulate_triple_junction_solar_cell.ipynb  solar-cell-absorption.ipynb  solar-cell-analysis.ipynb  test.ipynb  thickness-variation.ipynb  (+2 more)
jaxlayerlumos/: __init__.py  eps_fit_lorentzian.py  jaxlayerlumos.py  jaxlayerlumos_fast.py  jaxlayerlumos_new.py  jaxlayerlumos_old.py  jaxlayerlumos_old2.py  jaxlayerlumos_old_not_updated.py  light_sources.json  materials.json  plot_materials.py  utils_layers.py  utils_light_sources.py  utils_materials.py  utils_position.py  utils_radar_materials.py  utils_radio_frequency.py  utils_spectra.py  utils_units.py  wrappers.py
markdowns/: CODE_OF_CONDUCT.md  COMPARISONS.md  CONTRIBUTING.md  MATERIALS.md
notes/: Absorption_Notes.aux  Absorption_Notes.out  Absorption_Notes.toc  RadarUpdates.pages
paper/: paper.bib  paper.md
processing/: compare_old_new_lum.py  compare_results.txt  convert_materials.py  generate_materials_md.py  lumerical_stackrt_multi_layers.py  plot_color_matching_functions.py  read_and_save_color_matching_functions.py  read_and_save_illuminants.py  show_refractive_indices.py  test_stackrt_radar.py
radar/: Two_level_jax.py  optimization_configs.py  optimize_structure.py  plot_R_frequency.py  plot_R_thickness.py  random_search.py
tests/: Plot_Variables.py  test_XYZ_to_Lab.py  test_XYZ_to_sRGB.py  test_XYZ_to_xyY.py  test_absorption.py  test_angle.py  test_angles.py  test_comparison_old2_new.py  test_comparison_old_new.py  test_comparison_old_not_updated_new.py  test_comparison_old_old2.py  test_comparison_to_old_stackrt.py  test_convert_materials.py  test_grad.py  test_gradients.py  test_import.py  test_jaxlayerlumos.py  test_materials.py  test_radio_frequency.py  test_spectrum_to_Lab.py  test_spectrum_to_XYZ.py  test_stackrt.py  (+17 more)
(+158 files in other folders)
