[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools_scm",
]

[tool.setuptools]
packages = [
    "jaxlayerlumos",
]

[project]
name = "jaxlayerlumos"
version = "0.1.0"
description = "A JAX-based LayerLumos, focusing on efficient TMM optical simulations"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Mingxuan Li", email = "mil152@pitt.edu"},
    {name = "Jungtaek Kim", email = "jungtaek.kim.mail@gmail.com"},
]
dependencies = [
    "jax",
    "jaxlib",
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/mil152/jaxlayerlumos"
Source = "https://github.com/mil152/jaxlayerlumos"

[project.optional-dependencies]
dev = [
    "matplotlib",
    "pytest",
    "wheel",
    "build",
    "twine",
    "sphinx",
    "black",
]
